--- a/src/cli/Cargo.toml
+++ b/src/cli/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 # Internal core dependencies
-docker = { path = "../libs/kviewkube" }
+kviewkube = { path = "../libs/kviewkube" }
